@@ -1,3 +1,7 @@
+2013-07-15  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 11.5.0 Released.
+
 2013-07-12  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 11.5.0-rc2 Released.
